@@ -1,6 +1,10 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 
+==10/02/2010==
+Derision: Players disconnected with the Respawn Window up will now return to bind.
+Derision: Players rezzed in an instance via the Respawn Window will no longer zone.
+
 ==09/29/2010==
 Derision: Fixed crash in combat logging when a player was DoTted, zoned and then died from the DoT.
 Derision: Spells should no longer land on players with the Respawn Window up (e.g. AE DoTs, Evac spells).
